# ros_gz_project_template

./: .gitmodules  README.md  template_workspace.yaml
.github/workflows/: build-and-test.sh  ci.yml
ros_gz_example/: README.md
ros_gz_example/.github/workflows/: build-and-test.sh  ci.yml
ros_gz_example/bringup/: package.xml
ros_gz_example/bringup/launch/: example.launch.py
ros_gz_example/description/: package.xml
ros_gz_example/description/models/example/: model.config
ros_gz_example/gazebo/: package.xml
ros_gz_example/ros_gz_example_bringup/: CMakeLists.txt
ros_gz_example/ros_gz_example_description/: CMakeLists.txt  package.xml
ros_gz_example/ros_gz_example_description/hooks/: ros_gz_example_description.dsv.in
ros_gz_example/ros_gz_example_description/models/example/: model.sdf
ros_gz_example/ros_gz_example_gazebo/: CMakeLists.txt  package.xml
ros_gz_example/ros_gz_example_gazebo/worlds/: diff_drive.sdf  example.sdf
ros_gz_example_application/: CMakeLists.txt  package.xml
ros_gz_example_bringup/: CMakeLists.txt  package.xml
ros_gz_example_bringup/config/: diff_drive.rviz  ros_gz_example_bridge.yaml  rrbot.rviz
ros_gz_example_bringup/launch/: diff_drive.launch.py  rrbot_setup.launch.py
ros_gz_example_bringup/rviz/: diff_drive.rviz  example.rviz
ros_gz_example_description/: CMakeLists.txt  package.xml
ros_gz_example_description/hooks/: ros_gz_example_description.dsv.in  ros_gz_example_description.sh.in
ros_gz_example_description/models/diff_drive/: model.config  model.sdf
ros_gz_example_description/models/rrbot/: model.sdf
ros_gz_example_gazebo/: CMakeLists.txt  README.md  package.xml
ros_gz_example_gazebo/hooks/: README.md  ros_gz_example_gazebo.dsv.in  ros_gz_example_gazebo.sh.in
ros_gz_example_gazebo/include/ros_gz_example_gazebo/: BasicSystem.hh  FullSystem.hh
ros_gz_example_gazebo/proto/ros_gz_example_gazebo/msgs/: foobar.proto
ros_gz_example_gazebo/src/: BasicSystem.cc  CMakeLists.txt  FullSystem.cc
ros_gz_example_gazebo/src/basic_system/: BasicSystem.cpp  BasicSystem.hpp  CMakeLists.txt
ros_gz_example_gazebo/src/full_system/: CMakeLists.txt  FullSystem.cpp  FullSystem.hpp
ros_gz_example_gazebo/src/ros_system/: CMakeLists.txt  RosSystem.cpp  RosSystem.hpp
ros_gz_example_gazebo/worlds/: diff_drive.sdf  lunar_surface.sdf
ros_gz_example_gazebo/worlds/apollo15_landing_site_1000x1000/: model-1_4.sdf  model.sdf
